feat:auth-11: implement end point to refresh token
